--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <script src="{{ url_for('static', filename='lyrics.js') }}"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
+    {# Axios #}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
 	
