Counter display, persistence, increment

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,19 +38,15 @@
 			<h1 class='text-center'>The task is simple:</h1>
 			<p class='text-center'> You should sing a song and it's good - the magic 
 			counter will be incremented and you'll receive a special gift ^^<p>
+
+            <p class='text-center'>The song was sung <b>{{ sung_times }}</b> times already.</p>
+
 		</div>
 
 		<div class="bg-light">
 			<div class="d-flex justify-content-around">
 				<img class='santa' src="http://pngimg.com/uploads/santa_claus/santa_claus_PNG38508.png" alt="">
-				<pre class='text-center'>No more champagne
-And the fireworks are through
-Here we are, me and you
-Feeling lost and feeling blue
-It's the end of the party
-And the morning seems so grey
-So unlike yesterday
-Now's the time for us to say</pre>
+				<pre class='text-center'></pre>
 			</div>
 			<p class="text-center">
 				<button class="btn btn-primary start">Start</button>
